# adduce

./: README.md  adduce.cabal  repl
.github/workflows/: haskell.yml
src/: Main.hs  Paths_adduce.hs
src/Adduce/: Builtins.hs  Interpreter.hs  Parser.hs  Prelude.hs  Types.hs  Utils.hs
src/cli/: Main.hs
src/language/: prelude.adc
src/language/Adduce/: Builtins.hs  Interpreter.hs  Parser.hs  Prelude.hs  Types.hs  Utils.hs
src/language/Adduce/Types/: State.hs  Token.hs
src/test/: Main.hs
src/test/output/: bottles.out  macros.out  namespace.out  raise.out
src/test/scripts/: bottles.adc  macros.adc  namespace.adc  raise.adc
src/utils/: Utils.hs
tests/: bottles.adc  fizzbuzz.adc  helloworld.adc  raise.adc  raise.out
