cabal-version: 2.4
name:          adduce
version:       0.1.0

synopsis:   The interpreter for the Adduce programming language.
license:    MPL-2.0
author:     Katrina Scialdone
maintainer: kat@swordglowsblue.com

data-files: src/language/prelude.adc

common shared-properties
    default-language: Haskell2010
    build-depends:    base, containers
    ghc-options:      -fwarn-unused-imports

library
    import:         shared-properties
    hs-source-dirs: src/language
    build-depends:  adduce-utils, intern
    exposed-modules:
        Adduce.Interpreter
        Adduce.Prelude
        Adduce.Types
    other-modules:
        Adduce.Builtins
        Adduce.Parser
        Paths_adduce
    autogen-modules:
        Paths_adduce

library adduce-utils
    import:          shared-properties
    hs-source-dirs:  src/utils
    visibility:      private
    exposed-modules: Utils

executable adduce
    import:         shared-properties
    hs-source-dirs: src/cli
    build-depends:  adduce
    main-is:        Main.hs

test-suite test-scripts
    import:         shared-properties
    type:           exitcode-stdio-1.0
    hs-source-dirs: src/test
    build-depends:  adduce, adduce-utils, directory
    main-is:        Main.hs

