cabal-version: 2.4
name:          adduce
version:       0.1.0

synopsis:   The interpreter for the Adduce programming language.
license:    MPL-2.0
author:     Katrina Scialdone
maintainer: kat@swordglowsblue.com

data-files: src/language/prelude.adc

common shared-properties
    default-language: Haskell2010
    build-depends:    base, containers
    ghc-options:      -fwarn-unused-imports

library
    import:         shared-properties
    hs-source-dirs: src/language
    build-depends:  intern
    exposed-modules:
        Adduce.Interpreter
        Adduce.Prelude
        Adduce.Types
        Adduce.Utils
    other-modules:
        Adduce.Builtins
        Adduce.Parser
        Paths_adduce
    autogen-modules:
        Paths_adduce

executable adduce
    import:         shared-properties
    hs-source-dirs: src/cli
    build-depends:  adduce
    main-is:        Main.hs

test-suite test-scripts
    import:         shared-properties
    type:           exitcode-stdio-1.0
    hs-source-dirs: src/test
    build-depends:  adduce, directory
    main-is:        Main.hs

